--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xrpackage-cli",
+  "name": "xrpk",
   "version": "0.0.20",
   "description": "",
   "main": "cli.js",
@@ -22,16 +22,16 @@
   "homepage": "https://github.com/webaverse/xrpackage-cli",
   "dependencies": {
     "bignumber.js": "^9.0.0",
-    "eth-lightwallet": "^4.0.0",
-    "ethereumjs-tx": "^2.1.2",
+    "btoa": "^1.2.1",
     "express": "^4.17.1",
     "mime": "^2.4.4",
     "mkdirp": "^1.0.4",
+    "node-blob": "0.0.2",
     "node-fetch": "^2.6.0",
     "opn": "^6.0.0",
     "read": "^1.0.7",
     "wbn": "0.0.4",
-    "web3": "^1.2.6",
+    "xhr2": "^0.2.0",
     "yargs": "^15.3.1"
   },
   "browserslist": [
