--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "cli.js",
   "scripts": {
-    "start": "node cli.js",
+    "start": "node --no-warnings cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
