--- a/examples/html/manifest.json
+++ b/examples/html/manifest.json
@@ -1,4 +1,6 @@
 {
+  "name": "WebXR Cube",
+  "description": "Example XRPackage application",
   "xr_type": "webxr-site@0.0.1",
   "start_url": "cube.html"
 }
