Add missing open module

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mkdirp": "^1.0.4",
     "node-blob": "0.0.2",
     "node-fetch": "^2.6.0",
-    "opn": "^6.0.0",
+    "open": "^7.0.3",
     "read": "^1.0.7",
     "wbn": "0.0.4",
     "xhr2": "^0.2.0",
