--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
             "anonymous": "never",
             "named": "never",
             "asyncArrow": "always"
-        }]
+        }],
+        "no-throw-literal": "off",
+        "promise/param-names": "off"
     },
     "env": {
         "node": true
