--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-blob": "0.0.2",
     "node-fetch": "^2.6.0",
     "open": "^7.0.3",
+    "puppeteer": "^5.0.0",
     "read": "^1.0.7",
     "wbn": "0.0.4",
     "xhr2": "^0.2.0",
