Add browserify as a dev dependency

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "last 1 chrome version"
   ],
   "devDependencies": {
+    "browserify": "^16.5.1",
     "eslint": "^7.3.0",
     "eslint-config-semistandard": "^15.0.0",
     "eslint-config-standard": "^14.1.1",
