--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "scripts": {
     "start": "node --no-warnings cli.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "lint": "eslint --ext .js .",
     "lint-fix": "eslint --fix --ext .js ."
   },
@@ -42,6 +42,7 @@
     "last 1 chrome version"
   ],
   "devDependencies": {
+    "ava": "^3.11.0",
     "browserify": "^16.5.1",
     "eslint": "^7.3.0",
     "eslint-config-semistandard": "^15.0.0",
